--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -34,12 +34,13 @@
             android:inputType="textPersonName" />
 
         <ImageView
-            android:id="@+id/cameraButtonId"
+            android:id="@+id/tagButtonId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="1"
             android:layout_column="1"
-            app:srcCompat="@android:drawable/ic_menu_camera" />
+            app:srcCompat="@android:drawable/ic_menu_send"
+            android:tint="@color/colorPrimary"/>
 
         <TextView
             android:id="@+id/textView"
@@ -51,6 +52,16 @@
             android:text="TAG" />
 
     </GridLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabCameraId"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_margin="15dp"
+        app:srcCompat="@android:drawable/ic_menu_camera"
+        app:fabCustomSize="45dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="@+id/gridImagesId"/>
 
     <GridView
         android:id="@+id/gridImagesId"
