--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -29,8 +29,9 @@
             android:layout_row="1"
             android:layout_column="0"
             android:layout_columnWeight="1"
+            android:contentDescription="@string/tag_place_desc"
             android:ems="10"
-            android:hint="Digite a TAG"
+            android:hint="@string/tag_hint"
             android:inputType="textPersonName" />
 
         <ImageView
@@ -39,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_row="1"
             android:layout_column="1"
+            android:contentDescription="@string/tag_button_desc"
             app:srcCompat="@android:drawable/ic_menu_send"
             android:tint="@color/colorPrimary"/>
 
@@ -61,7 +63,8 @@
         app:srcCompat="@android:drawable/ic_menu_camera"
         app:fabCustomSize="45dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="@+id/gridImagesId"/>
+        app:layout_constraintEnd_toEndOf="@+id/gridImagesId"
+        android:contentDescription="@string/photo_button_desc"/>
 
     <GridView
         android:id="@+id/gridImagesId"
@@ -69,6 +72,7 @@
         android:layout_height="0dp"
         android:fastScrollEnabled="true"
         android:numColumns="2"
+        android:contentDescription="@string/image_place_desc"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,7 +96,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Texto" />
+            android:contentDescription="@string/text_button_desc"
+            android:text="@string/text_button" />
 
         <Button
             android:id="@+id/imageButtonId"
@@ -100,7 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="#1E88E5"
-            android:text="Image"
+            android:text="@string/image_button"
             android:textColor="@android:color/background_light" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
